ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
12/06/13 Daniel K. O.
        * Applied patch #181: fix some bugs in AMotor joint.
        * Applied patch #186: fix some bugs in PU joint.
        * Applied patch #182: Transmission joint.
        * Applied patch #184: implement rolling friction for contacts.

08/08/13 Oleh Derevenko
        * Joint feedback forces application fixed in QuickStep implementation
          (was broken since revision #1919 in old repository (#1927 in new one))

08/04/13 Oleh Derevenko
        * Bugfix #89 by Luc applied (dJointAddSliderForce() adds a zero force
          when the parent body is NULL) 

05/18/13 Oleh Derevenko
        * OU library has been included in ODE at revision #46 instead of  
          being used as an external link due to difficulties using external 
          references with new protocol used for storage at SF.

03/03/13 Oleh Derevenko
        * Fixed issue with "findex==-1" constraints being intermixed with 
          "findex!=-1" ones during constraints random reordering in QuickStep.

02/03/13 Oleh Derevenko
        * [u]int[8/16/32] renamed to contain "d" prefix so that global namespace
          was not polluted with these names unconditionally. 
          If your project depended on these types other than just for passing 
          parameters to ODE calls, add similar typedefs for yourself in some 
          of your project's global headers.

01/02/13 Oleh Derevenko
        * Applied patch #183 by Joseph Cooper (complementary matrix 
          calculation fix).

12/28/12 Oleh Derevenko
        * A bug with heightfield data assigned to a wrong field in 